# Thoth

./: .gitignore  CMakeLists.txt  License  Readme.md
include/Thoth/: Attribute.hpp  CMakeLists.txt  RenderComponent.hpp  RenderElement.hpp  RenderManager.hpp
include/Thoth/Common/: Attributes.hpp  CMakeLists.txt
src/: Attribute.cpp  CMakeLists.txt  IndentData.cpp  IndentData.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderElement.cpp  RenderElement.h  RenderElement.hpp  RenderManager.cpp  RenderManager.hpp  Renderer.cpp  Renderer.h
src/Common/: Attributes.cpp  CMakeLists.txt
